// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportWallet import with private key when is not valid 1`] = `
<div>
  <section
    data-testid="ImportWallet__method-step"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Wallet
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the import method by which you want to import the address to your Profile.
        </div>
      </div>
    </div>
    <div
      class="mt-8 space-y-6"
    >
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for=""
        >
          Import Type
        </label>
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name=""
                readonly=""
                tabindex="-1"
                type="text"
                value="privateKey"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="ImportWallet__select-menu"
              role="combobox"
            >
              <div>
                <label
                  for="ImportWallet__select-input"
                  id="ImportWallet__select-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  Private Key
                  …
                </div>
                <div
                  class="css-1psxlcd"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="ImportWallet__select-menu"
                      aria-labelledby="ImportWallet__select-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1nupw50"
                      data-testid="SelectDropdown__input"
                      id="ImportWallet__select-input"
                      name=""
                      placeholder="Select option"
                      type="text"
                      value="Private Key"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        Private Key
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="ImportWallet__select-label"
                id="ImportWallet__select-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="value"
        >
          Private Key
        </label>
        <div
          class="css-1psxlcd"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none css-1nupw50"
              data-testid="ImportWallet__privatekey-input"
              name="value"
              type="password"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            data-testid="Input__addon-end"
          >
            <div
              class=""
            >
              <button
                class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                data-ring-focus-margin="-m-1"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-800 css-13w0p49"
        type="horizontal"
      />
      <div
        class="flex w-full flex-col space-y-2"
      >
        <div
          class="flex items-center justify-between space-x-5"
        >
          <span
            class="font-bold text-theme-secondary-text"
          >
            Use Wallet Encryption
          </span>
          <span
            data-testid="ImportWallet__encryption"
          >
            <label
              class="css-xklln0"
            >
              <input
                class="css-1r71f0z toggle-input"
                data-testid="ImportWallet__encryption-toggle"
                type="checkbox"
              />
              <div
                class="css-7lwhds toggle-handle"
              >
                <span
                  class="css-1fmiyrr"
                />
              </div>
            </label>
          </span>
        </div>
        <span
          class="mr-12 text-sm text-theme-secondary-500"
        >
          Set an encryption password to use in place of your mnemonic passphrase. Note that you must still record and keep your mnemonic passphrase safe as losing this will result in you losing all access to your funds.
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`ImportWallet import with private key when is valid 1`] = `
<div>
  <section
    data-testid="ImportWallet__method-step"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Wallet
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the import method by which you want to import the address to your Profile.
        </div>
      </div>
    </div>
    <div
      class="mt-8 space-y-6"
    >
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for=""
        >
          Import Type
        </label>
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name=""
                readonly=""
                tabindex="-1"
                type="text"
                value="privateKey"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="ImportWallet__select-menu"
              role="combobox"
            >
              <div>
                <label
                  for="ImportWallet__select-input"
                  id="ImportWallet__select-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  Private Key
                  …
                </div>
                <div
                  class="css-1psxlcd"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="ImportWallet__select-menu"
                      aria-labelledby="ImportWallet__select-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1nupw50"
                      data-testid="SelectDropdown__input"
                      id="ImportWallet__select-input"
                      name=""
                      placeholder="Select option"
                      type="text"
                      value="Private Key"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        Private Key
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="ImportWallet__select-label"
                id="ImportWallet__select-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="value"
        >
          Private Key
        </label>
        <div
          class="css-1psxlcd"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none css-1nupw50"
              data-testid="ImportWallet__privatekey-input"
              name="value"
              type="password"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            data-testid="Input__addon-end"
          >
            <div
              class=""
            >
              <button
                class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                data-ring-focus-margin="-m-1"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-800 css-13w0p49"
        type="horizontal"
      />
      <div
        class="flex w-full flex-col space-y-2"
      >
        <div
          class="flex items-center justify-between space-x-5"
        >
          <span
            class="font-bold text-theme-secondary-text"
          >
            Use Wallet Encryption
          </span>
          <span
            data-testid="ImportWallet__encryption"
          >
            <label
              class="css-xklln0"
            >
              <input
                class="css-1r71f0z toggle-input"
                data-testid="ImportWallet__encryption-toggle"
                type="checkbox"
              />
              <div
                class="css-7lwhds toggle-handle"
              >
                <span
                  class="css-1fmiyrr"
                />
              </div>
            </label>
          </span>
        </div>
        <span
          class="mr-12 text-sm text-theme-secondary-500"
        >
          Set an encryption password to use in place of your mnemonic passphrase. Note that you must still record and keep your mnemonic passphrase safe as losing this will result in you losing all access to your funds.
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`ImportWallet import with wif with invalid wif 1`] = `
<div>
  <section
    data-testid="ImportWallet__method-step"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Wallet
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the import method by which you want to import the address to your Profile.
        </div>
      </div>
    </div>
    <div
      class="mt-8 space-y-6"
    >
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for=""
        >
          Import Type
        </label>
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name=""
                readonly=""
                tabindex="-1"
                type="text"
                value="wif"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="ImportWallet__select-menu"
              role="combobox"
            >
              <div>
                <label
                  for="ImportWallet__select-input"
                  id="ImportWallet__select-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  WIF
                  …
                </div>
                <div
                  class="css-1psxlcd"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="ImportWallet__select-menu"
                      aria-labelledby="ImportWallet__select-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1nupw50"
                      data-testid="SelectDropdown__input"
                      id="ImportWallet__select-input"
                      name=""
                      placeholder="Select option"
                      type="text"
                      value="WIF"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        WIF
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="ImportWallet__select-label"
                id="ImportWallet__select-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="value"
        >
          WIF
        </label>
        <div
          class="css-1psxlcd"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none css-1nupw50"
              data-testid="ImportWallet__wif-input"
              name="value"
              type="password"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            data-testid="Input__addon-end"
          >
            <div
              class=""
            >
              <button
                class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                data-ring-focus-margin="-m-1"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-800 css-13w0p49"
        type="horizontal"
      />
      <div
        class="flex w-full flex-col space-y-2"
      >
        <div
          class="flex items-center justify-between space-x-5"
        >
          <span
            class="font-bold text-theme-secondary-text"
          >
            Use Wallet Encryption
          </span>
          <span
            data-testid="ImportWallet__encryption"
          >
            <label
              class="css-xklln0"
            >
              <input
                class="css-1r71f0z toggle-input"
                data-testid="ImportWallet__encryption-toggle"
                type="checkbox"
              />
              <div
                class="css-7lwhds toggle-handle"
              >
                <span
                  class="css-1fmiyrr"
                />
              </div>
            </label>
          </span>
        </div>
        <span
          class="mr-12 text-sm text-theme-secondary-500"
        >
          Set an encryption password to use in place of your mnemonic passphrase. Note that you must still record and keep your mnemonic passphrase safe as losing this will result in you losing all access to your funds.
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`ImportWallet import with wif with valid wif 1`] = `
<div>
  <section
    data-testid="ImportWallet__method-step"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Wallet
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the import method by which you want to import the address to your Profile.
        </div>
      </div>
    </div>
    <div
      class="mt-8 space-y-6"
    >
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for=""
        >
          Import Type
        </label>
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name=""
                readonly=""
                tabindex="-1"
                type="text"
                value="wif"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="ImportWallet__select-menu"
              role="combobox"
            >
              <div>
                <label
                  for="ImportWallet__select-input"
                  id="ImportWallet__select-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  WIF
                  …
                </div>
                <div
                  class="css-1psxlcd"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="ImportWallet__select-menu"
                      aria-labelledby="ImportWallet__select-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1nupw50"
                      data-testid="SelectDropdown__input"
                      id="ImportWallet__select-input"
                      name=""
                      placeholder="Select option"
                      type="text"
                      value="WIF"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        WIF
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="ImportWallet__select-label"
                id="ImportWallet__select-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="value"
        >
          WIF
        </label>
        <div
          class="css-1psxlcd"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none css-1nupw50"
              data-testid="ImportWallet__wif-input"
              name="value"
              type="password"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            data-testid="Input__addon-end"
          >
            <div
              class=""
            >
              <button
                class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                data-ring-focus-margin="-m-1"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-800 css-13w0p49"
        type="horizontal"
      />
      <div
        class="flex w-full flex-col space-y-2"
      >
        <div
          class="flex items-center justify-between space-x-5"
        >
          <span
            class="font-bold text-theme-secondary-text"
          >
            Use Wallet Encryption
          </span>
          <span
            data-testid="ImportWallet__encryption"
          >
            <label
              class="css-xklln0"
            >
              <input
                class="css-1r71f0z toggle-input"
                data-testid="ImportWallet__encryption-toggle"
                type="checkbox"
              />
              <div
                class="css-7lwhds toggle-handle"
              >
                <span
                  class="css-1fmiyrr"
                />
              </div>
            </label>
          </span>
        </div>
        <span
          class="mr-12 text-sm text-theme-secondary-500"
        >
          Set an encryption password to use in place of your mnemonic passphrase. Note that you must still record and keep your mnemonic passphrase safe as losing this will result in you losing all access to your funds.
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`ImportWallet should import with encryped wif 1`] = `
<div>
  <section
    data-testid="ImportWallet__method-step"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Wallet
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the import method by which you want to import the address to your Profile.
        </div>
      </div>
    </div>
    <div
      class="mt-8 space-y-6"
    >
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for=""
        >
          Import Type
        </label>
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name=""
                readonly=""
                tabindex="-1"
                type="text"
                value="encryptedWif"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="ImportWallet__select-menu"
              role="combobox"
            >
              <div>
                <label
                  for="ImportWallet__select-input"
                  id="ImportWallet__select-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  Encrypted WIF
                  …
                </div>
                <div
                  class="css-1psxlcd"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="ImportWallet__select-menu"
                      aria-labelledby="ImportWallet__select-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1nupw50"
                      data-testid="SelectDropdown__input"
                      id="ImportWallet__select-input"
                      name=""
                      placeholder="Select option"
                      type="text"
                      value="Encrypted WIF"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        Encrypted WIF
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="ImportWallet__select-label"
                id="ImportWallet__select-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="encryptedWif"
        >
          Encrypted WIF
        </label>
        <div
          class="relative"
        >
          <div
            class="css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="ImportWallet__encryptedWif-input"
                name="encryptedWif"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="value"
        >
          Password
        </label>
        <div
          class="css-1psxlcd"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none css-1nupw50"
              data-testid="ImportWallet__encryptedWif__password-input"
              name="value"
              type="password"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            data-testid="Input__addon-end"
          >
            <div
              class=""
            >
              <button
                class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                data-ring-focus-margin="-m-1"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-800 css-13w0p49"
        type="horizontal"
      />
      <div
        class="flex w-full flex-col space-y-2"
      >
        <div
          class="flex items-center justify-between space-x-5"
        >
          <span
            class="font-bold text-theme-secondary-text"
          >
            Use Wallet Encryption
          </span>
          <span
            data-testid="ImportWallet__encryption"
          >
            <label
              class="css-irspe1"
              disabled=""
            >
              <input
                class="css-1r71f0z toggle-input"
                data-testid="ImportWallet__encryption-toggle"
                disabled=""
                type="checkbox"
              />
              <div
                class="css-7lwhds toggle-handle"
              >
                <span
                  class="css-2v9y9y"
                  disabled=""
                />
              </div>
            </label>
          </span>
        </div>
        <span
          class="mr-12 text-sm text-theme-secondary-500"
        >
          Set an encryption password to use in place of your mnemonic passphrase. Note that you must still record and keep your mnemonic passphrase safe as losing this will result in you losing all access to your funds.
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`ImportWallet should render as ledger import 1`] = `
<div>
  <div
    class="css-w3nefz"
  >
    <div
      class="css-tbczne"
      data-testid="NavigationBarMobile"
    >
      <div
        class="border-t border-theme-secondary-300 dark:border-theme-secondary-900"
        data-testid="NavigationBar__buttons-separator"
      />
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--receive"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                dashboard.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--send"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sent.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="css-1ovuwx0"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1v0i3m7"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  height="28"
                >
                  arkvault-logo.svg
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="mr-auto ml-4 hidden h-21 space-x-8 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="mr-auto ml-2 flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  type="button"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      menu.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--server-status"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            cloud.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-success-700"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-12xyeiw"
                    data-testid="NavigationBar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-12xyeiw"
                    data-testid="NavigationBar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="my-auto mx-4 hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="-mt-3 flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 py-2.5 px-8 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                data-testid="UserMenu"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="flex-1 css-ycib48"
      >
        <div
          class="mx-auto px-8 md:px-10 lg:container"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="ImportWallet__form"
          >
            <div
              id="ledgerTabs"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="css-3qwsx5"
                />
                <ul
                  class="css-xa5o6q"
                >
                  <li
                    class="css-47028"
                  />
                  <li
                    class="css-3ldhk3"
                  />
                  <li
                    class="css-3ldhk3"
                  />
                  <li
                    class="css-3ldhk3"
                  />
                  <li
                    class="css-3ldhk3"
                  />
                </ul>
              </div>
              <div
                class="mt-8"
                data-testid="LedgerTabs"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="LedgerAuthStep"
                  >
                    <div
                      class="flex items-end justify-between bg-theme-background"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-2xl"
                          data-testid="header__title"
                        >
                          Connect and Authorize Ledger Device
                        </h1>
                      </div>
                    </div>
                    <svg
                      class="mx-auto max-w-full"
                    >
                      auth-ledger-device-light.svg
                    </svg>
                    <p
                      class="text-theme-secondary-text"
                    >
                      Connect your Ledger device, open the ARK app, and authorize the connection with ARKVault.
                    </p>
                    <div
                      class="inline-flex w-full items-center justify-center space-x-3"
                    >
                      <div
                        class="css-1v2j3qb"
                        color="info"
                      />
                      <span
                        class="animate-pulse font-semibold text-theme-secondary-text"
                        data-testid="LedgerWaitingDevice-loading_message"
                      >
                        Waiting for confirmation  ...
                      </span>
                    </div>
                  </section>
                </div>
              </div>
              <div
                class="css-1kzb86y"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="Paginator__back-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="css-1bx0hyc"
                  data-testid="Paginator__continue-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Continue
                  </div>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImportWallet should render method step 1`] = `
<div>
  <section
    data-testid="ImportWallet__method-step"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Wallet
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Select the import method by which you want to import the address to your Profile.
        </div>
      </div>
    </div>
    <div
      class="mt-8 space-y-6"
    >
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for=""
        >
          Import Type
        </label>
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name=""
                readonly=""
                tabindex="-1"
                type="text"
                value="bip39"
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="ImportWallet__select-menu"
              role="combobox"
            >
              <div>
                <label
                  for="ImportWallet__select-input"
                  id="ImportWallet__select-label"
                />
                <div
                  class="invisible fixed w-auto whitespace-nowrap"
                >
                  Mnemonic
                  …
                </div>
                <div
                  class="css-1psxlcd"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="ImportWallet__select-menu"
                      aria-labelledby="ImportWallet__select-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1nupw50"
                      data-testid="SelectDropdown__input"
                      id="ImportWallet__select-input"
                      name=""
                      placeholder="Select option"
                      type="text"
                      value="Mnemonic"
                    />
                    <span
                      class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                      data-testid="Input__suggestion"
                    >
                      <span
                        class="truncate"
                      >
                        Mnemonic
                      </span>
                    </span>
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="ImportWallet__select-label"
                id="ImportWallet__select-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="flex flex-col css-1bcidjh"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="value"
        >
          Mnemonic
        </label>
        <div
          class="css-1psxlcd"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="no-ligatures w-full border-none css-1nupw50"
              data-testid="ImportWallet__mnemonic-input"
              name="value"
              type="password"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            data-testid="Input__addon-end"
          >
            <div
              class=""
            >
              <button
                class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                data-ring-focus-margin="-m-1"
                data-testid="InputPassword__toggle"
                type="button"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    eye.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </fieldset>
      <div
        class="border-theme-secondary-300 dark:border-theme-secondary-800 css-13w0p49"
        type="horizontal"
      />
      <div
        class="flex w-full flex-col space-y-2"
      >
        <div
          class="flex items-center justify-between space-x-5"
        >
          <span
            class="font-bold text-theme-secondary-text"
          >
            Use Wallet Encryption
          </span>
          <span
            data-testid="ImportWallet__encryption"
          >
            <label
              class="css-irspe1"
              disabled=""
            >
              <input
                class="css-1r71f0z toggle-input"
                data-testid="ImportWallet__encryption-toggle"
                disabled=""
                type="checkbox"
              />
              <div
                class="css-7lwhds toggle-handle"
              >
                <span
                  class="css-2v9y9y"
                  disabled=""
                />
              </div>
            </label>
          </span>
        </div>
        <span
          class="mr-12 text-sm text-theme-secondary-500"
        >
          Set an encryption password to use in place of your mnemonic passphrase. Note that you must still record and keep your mnemonic passphrase safe as losing this will result in you losing all access to your funds.
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`ImportWallet should render network step 1`] = `
<DocumentFragment>
  <section
    data-testid="NetworkStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          title
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          subtitle
        </div>
      </div>
    </div>
    <fieldset
      class="mt-8 css-1bcidjh"
    >
      <label
        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
      </label>
      <div
        data-testid="SelectNetwork"
      >
        <div
          class="relative w-full"
          data-testid="SelectDropdown"
        >
          <div
            class="sr-only css-1psxlcd"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="no-ligatures w-full border-none css-1nupw50"
                data-testid="select-list__input"
                name="network"
                readonly=""
                tabindex="-1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="w-full"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="downshift-0-menu"
              role="combobox"
            >
              <div>
                <label
                  for="downshift-0-input"
                  id="downshift-0-label"
                />
                <div
                  class="css-1psxlcd"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-0-menu"
                      aria-labelledby="downshift-0-label"
                      autocomplete="off"
                      class="no-ligatures w-full border-none cursor-default css-1nupw50"
                      data-testid="SelectDropdown__input"
                      id="downshift-0-input"
                      name="network"
                      placeholder="Select option"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="flex items-center justify-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="transition-transform text-theme-secondary-500 css-15txs7d"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="downshift-0-label"
                id="downshift-0-menu"
                role="listbox"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </section>
</DocumentFragment>
`;

exports[`ImportWallet should render success step (lg) 1`] = `
<DocumentFragment>
  <section
    data-testid="ImportWallet__success-step"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Wallet import is complete. Now you can use it.
        </div>
      </div>
    </div>
    <div
      class="no-ligatures mt-2 css-1iw2tte"
      data-testid="WalletDetailNetwork"
    >
      <div
        class="flex w-full items-center justify-between space-x-4"
      >
        <div
          class="w-40 space-y-2 whitespace-nowrap sm:flex-1"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Cryptoasset
          </div>
          <div
            class="hidden items-center font-semibold sm:flex"
          >
            ARK Devnet
          </div>
        </div>
        <div
          class="flex w-full items-center justify-end overflow-auto sm:w-auto"
        >
          <div
            class="flex w-full items-center justify-end overflow-auto pr-4 font-semibold sm:hidden"
          >
            <div
              class="w-full truncate"
            >
              ARK Devnet
            </div>
          </div>
          <div
            class="hidden sm:block"
          >
            <div
              aria-label="ARK Devnet"
              class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex items-center sm:hidden"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-19rivvh"
      data-testid="TransactionDetail"
    >
      <div
        class="flex w-full items-center justify-between space-x-4"
      >
        <div
          class="w-40 space-y-2 whitespace-nowrap sm:flex-1"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Address
          </div>
          <div
            class="hidden items-center font-semibold sm:flex"
          >
            <div
              class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
            >
              <span
                class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex w-full items-center justify-end overflow-auto sm:w-auto"
        >
          <div
            class="flex w-full items-center justify-end overflow-auto pr-4 font-semibold sm:hidden"
          >
            <div
              class="w-full truncate"
            >
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center sm:hidden"
          >
            <div
              class="shrink-0 css-1vy2z2u"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
          <div
            class="hidden sm:flex sm:items-center"
          >
            <div
              class="shrink-0 css-8d0u1i"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-19rivvh"
      data-testid="TransactionDetail"
    >
      <div
        class="flex w-full items-center justify-between space-x-4"
      >
        <div
          class="w-40 space-y-2 whitespace-nowrap sm:flex-1"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Balance
          </div>
          <div
            class="hidden items-center font-semibold sm:flex"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </div>
        <div
          class="flex w-full items-center justify-end overflow-auto sm:w-auto"
        >
          <div
            class="flex w-full items-center justify-end overflow-auto pr-4 font-semibold sm:hidden"
          >
            <div
              class="w-full truncate"
            >
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801 DARK
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-wr7004"
      data-testid="TransactionDetail"
    >
      <div
        class="flex w-full items-center justify-between space-x-4"
      >
        <div
          class="w-40 space-y-2 whitespace-nowrap sm:flex-1"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Wallet Name
          </div>
          <div
            class="hidden items-center font-semibold sm:flex"
          >
            ARK Wallet 1
          </div>
        </div>
        <div
          class="flex w-full items-center justify-end overflow-auto sm:w-auto"
        >
          <div
            class="flex w-full items-center justify-end overflow-auto pr-4 font-semibold sm:hidden"
          >
            <div
              class="w-full truncate"
            >
              ARK Wallet 1
            </div>
          </div>
          <button
            class="css-1jhy6v9"
            data-testid="ImportWallet__edit-alias"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  pencil.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ImportWallet should render success step (xs) 1`] = `
<DocumentFragment>
  <section
    data-testid="ImportWallet__success-step"
  >
    <div
      class="flex items-end justify-between bg-theme-background hidden sm:block"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Wallet import is complete. Now you can use it.
        </div>
      </div>
    </div>
    <div
      class="no-ligatures mt-2 css-1iw2tte"
      data-testid="WalletDetailNetwork"
    >
      <div
        class="flex w-full items-center justify-between space-x-4"
      >
        <div
          class="w-40 space-y-2 whitespace-nowrap sm:flex-1"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Cryptoasset
          </div>
          <div
            class="hidden items-center font-semibold sm:flex"
          >
            ARK Devnet
          </div>
        </div>
        <div
          class="flex w-full items-center justify-end overflow-auto sm:w-auto"
        >
          <div
            class="flex w-full items-center justify-end overflow-auto pr-4 font-semibold sm:hidden"
          >
            <div
              class="w-full truncate"
            >
              ARK Devnet
            </div>
          </div>
          <div
            class="hidden sm:block"
          >
            <div
              aria-label="ARK Devnet"
              class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex items-center sm:hidden"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-19rivvh"
      data-testid="TransactionDetail"
    >
      <div
        class="flex w-full items-center justify-between space-x-4"
      >
        <div
          class="w-40 space-y-2 whitespace-nowrap sm:flex-1"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Address
          </div>
          <div
            class="hidden items-center font-semibold sm:flex"
          >
            <div
              class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
            >
              <span
                class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                data-testid="Address__address"
              >
                D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex w-full items-center justify-end overflow-auto sm:w-auto"
        >
          <div
            class="flex w-full items-center justify-end overflow-auto pr-4 font-semibold sm:hidden"
          >
            <div
              class="w-full truncate"
            >
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center sm:hidden"
          >
            <div
              class="shrink-0 css-1vy2z2u"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
          <div
            class="hidden sm:flex sm:items-center"
          >
            <div
              class="shrink-0 css-8d0u1i"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-19rivvh"
      data-testid="TransactionDetail"
    >
      <div
        class="flex w-full items-center justify-between space-x-4"
      >
        <div
          class="w-40 space-y-2 whitespace-nowrap sm:flex-1"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Balance
          </div>
          <div
            class="hidden items-center font-semibold sm:flex"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </div>
        <div
          class="flex w-full items-center justify-end overflow-auto sm:w-auto"
        >
          <div
            class="flex w-full items-center justify-end overflow-auto pr-4 font-semibold sm:hidden"
          >
            <div
              class="w-full truncate"
            >
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801 DARK
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="no-ligatures css-19rivvh"
      data-testid="TransactionDetail"
    >
      <div
        class="flex w-full items-center justify-between space-x-4"
      >
        <div
          class="w-40 space-y-2 whitespace-nowrap sm:flex-1"
        >
          <div
            class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Wallet Name
          </div>
          <div
            class="hidden items-center font-semibold sm:flex"
          >
            ARK Wallet 1
          </div>
        </div>
        <div
          class="flex w-full items-center justify-end overflow-auto sm:w-auto"
        >
          <div
            class="flex w-full items-center justify-end overflow-auto pr-4 font-semibold sm:hidden"
          >
            <div
              class="w-full truncate"
            >
              ARK Wallet 1
            </div>
          </div>
          <button
            class="css-1jhy6v9"
            data-testid="ImportWallet__edit-alias"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  pencil.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
